# ChangeLog for net-p2p/litecoind
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  03 Jul 2015; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  litecoind-0.10.2.2.ebuild:
  Fix bash-completion function file name.

  03 Jul 2015; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  litecoind-0.10.2.2.ebuild:
  Fix manual page names.

  03 Jul 2015; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  +files/litecoind.service:
  Add systemd unit file.

*litecoind-0.10.2.2 (30 Jun 2015)

  30 Jun 2015; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  -litecoind-0.8.7.5.ebuild, +litecoind-0.10.2.2.ebuild,
  +files/litecoind-0.10.2.2-sys-leveldb.patch,
  files/litecoin-sys_leveldb.patch:
  Version bump.

*litecoind-0.8.7.5 (09 Mar 2015)

  09 Mar 2015; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  -litecoind-0.8.7.4.ebuild, +litecoind-0.8.7.5.ebuild:
  Version bump.

*litecoind-0.8.7.4 (03 Nov 2014)

  03 Nov 2014; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  -litecoind-0.8.6.2.ebuild, +litecoind-0.8.7.4.ebuild,
  +files/litecoin.initd-r1, +files/litecoin.service,
  +files/litecoin-sys_leveldb.patch:
  Version bump. Based on upstream litecoind-0.8.7.2 ebuild.

  06 Apr 2014; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  litecoind-0.8.6.2.ebuild, litecoind-9999.ebuild:
  Inherit user.

*litecoind-0.8.6.2 (14 Jan 2014)

  14 Jan 2014; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  -litecoind-0.8.6.1.ebuild, +litecoind-0.8.6.2.ebuild:
  Version bump.

*litecoind-0.8.6.1 (23 Dec 2013)

  23 Dec 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  -litecoind-0.8.5.1.ebuild, +litecoind-0.8.6.1.ebuild:
  Version bump.

*litecoind-0.8.5.1 (28 Nov 2013)

  28 Nov 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  -litecoind-0.8.3.7.ebuild, +litecoind-0.8.5.1.ebuild:
  Version bump.

  16 Aug 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  litecoind-0.8.3.7.ebuild: